--- a/templates/search.html
+++ b/templates/search.html
@@ -30,7 +30,7 @@
                             <h2 style="font-size: 50px; white-space: nowrap;">{{ data.name }}</h2>
                         </div>
                         <div style="padding: 10px; text-align: left; grid-column-start: 2; grid-column-end: 3; grid-row-start: 2; grid-row-end: 3; vertical-align: middle;">
-                            <h5 style="font-weight: bold; font-size: 30px;">₹. {{ data.price }}</h5>
+                            <h5 style="font-weight: bold; font-size: 30px;">₹{{ data.price }}</h5>
                         </div>
                         <div style="padding: 10px; text-align: left; grid-column-start: 3; grid-column-end: 4; grid-row-start: 2; grid-row-end: 3; vertical-align: middle;">
                             <h5 style="font-size: 30px;">{{ data.rating }}</h5>
