--- a/templates/product.html
+++ b/templates/product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Product "{{ name }}"</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
@@ -39,12 +39,8 @@
         }
       </script> -->
 
-      <form method="post" action="" style="width: 70%;">
-        <div class="input-group rounded" style="padding: 50px;">
-          <input type="search" class="form-control rounded" placeholder="Search for a product on Amazon..." name="search"/>
-          <button type="submit" class="btn btn-outline-dark">Submit</button>
-        </div>
-      </form>
+      <!-- <a href="/"><button class="btn btn-outline-dark" style="margin-left: 15%; margin-top: 80px;">Go home</button></a> -->
+      <a href="/"><img style="max-height: 96px; max-width: 96px; margin-left: 15%; margin-top: 50px; margin-bottom: 30px;" src="{{ url_for('static', filename='home.svg') }}"></a>
 
       <div id="productDesc" style="margin: 40px auto; display: grid; grid-template-columns: 25% 35% 30%; grid-template-rows: 40% 25% 25%; gap: 5% 5%; width: 70%;">
         <div style="height: 300px; width: 300px; overflow: hidden; padding: 10px; grid-column-start: 1; grid-column-end: 2; grid-row-start: 1; grid-row-end: 4;">
@@ -78,7 +74,7 @@
         <!-- <input class="form-control rounded" type="text" list="words" style="width: 50%; margin: 10px;" onsubmit="setBarWidth('keyword-sentiment-bar', 0.22)"> -->
         <form method="post" action="" style="width: 50%;">
           <div class="input-group rounded" style="padding: 50px;">
-            <input id="keysearch" class="form-control rounded" type="text" list="words" placeholder="Search for a keyword" value="{{ keyword }}" name="keyword" onsubmit="{{ url_for('product', index=index, keyword=keyword) }}"/>
+            <input id="keysearch" class="form-control rounded" type="text" list="words" autocomplete="off" placeholder="Search for a keyword" value="{{ keyword }}" name="keyword" onsubmit="{{ url_for('product', index=index, keyword=keyword) }}"/>
             <button type="submit" class="btn btn-outline-dark">Go</button>
           </div>
         </form>
@@ -87,7 +83,7 @@
             <option>{{ word }}</option>
           {% endfor %}
         </datalist>
-        <h5 style="font-size: 30px; margin: 10px;">Reviews: {{ val[keyword]*100 }}%</h5>
+        <h5 style="font-size: 30px; margin: 10px;">Reviews: {{ val[keyword]*100|round(2) }}%</h5>
         <p id="contains-val" hidden>{{ val[keyword] }}</p>
         <div class="sentiment-indicator" style="background-color: #222222; margin: 10px auto; height: 10px; border-radius: 5px; position: relative;">
           <div class="sentiment-bar" id="keyword-sentiment-bar" style="background-color: #ffa600; width: 11%; height: 10px; border-radius: 5px; position: absolute; left: 39%;"></div>
