--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Searched for "{{ q }}"</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
@@ -13,7 +13,7 @@
 
       <form method="post" action="">
         <div class="input-group rounded" style="padding: 50px; padding-left: 300px; padding-right: 300px;">
-          <input type="search" class="form-control rounded" placeholder="Search for a product on Amazon..." name="search"/>
+          <input type="search" class="form-control rounded" placeholder="Search for a product..." name="search"/>
           <button type="submit" class="btn btn-outline-dark">Submit</button>
         </div>
       </form>
