--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="row justify-content-center align-items-center d-flex flex-column min-vh-100">
-      <h1 style="padding: 50px; text-align: center; font-size: 80px;">HackNite 2k23</h1>
+      <h1 style="padding: 50px; text-align: center; font-size: 80px;">SwiftScore</h1>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
       <form method="post" action="">
         <div class="input-group rounded" style="padding: 50px; padding-left: 300px; padding-right: 300px;">
-          <input type="search" class="form-control rounded" placeholder="Search for a product on Amazon..." name="search"/>
+          <input type="search" class="form-control rounded" placeholder="Search for a product..." name="search"/>
           <button type="submit" class="btn btn-outline-dark">Submit</button>
         </div>
       </form>
