The final commit rises

--- a/templates/product.html
+++ b/templates/product.html
@@ -83,7 +83,26 @@
             <option>{{ word }}</option>
           {% endfor %}
         </datalist>
-        <h5 style="font-size: 30px; margin: 10px;">Reviews: {{ (val[keyword]*100)|round(2) }}%</h5>
+        <h5 style="font-size: 30px; margin: 10px; display: inline;">Reviews: {{ (val[keyword]*100)|round(2) }}%</h5>
+        <h5 style="font-size: 30px; margin: 10px; margin-left: 80px; display: inline;">
+          {% if (val[keyword]*100 > 5 and val[keyword]*100 <= 20) %}
+            Slightly positive
+          {% elif (val[keyword]*100 < -5 and val[keyword]*100 >= -15) %}
+            Slightly negative
+          {% elif (val[keyword]*100 > 20 and val[keyword]*100 <= 50) %}
+            Positive
+          {% elif (val[keyword]*100 < -15 and val[keyword]*100 >= -35) %}
+            Negative
+          {% elif (val[keyword]*100 > 50) %}
+            Highly positive
+          {% elif (val[keyword]*100 < -35) %}
+            Highly negative
+          {% elif (val[keyword]*100 < -35) %}
+            Not available
+          {% else %}
+            Neutral
+          {% endif %}
+        </h5>
         <p id="contains-val" hidden>{{ val[keyword] }}</p>
         <div class="sentiment-indicator" style="background-color: #222222; margin: 10px auto; height: 10px; border-radius: 5px; position: relative;">
           <div class="sentiment-bar" id="keyword-sentiment-bar" style="background-color: #ffa600; width: 11%; height: 10px; border-radius: 5px; position: absolute; left: 39%;"></div>
