--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
+    <!--content-->
     <div class="row justify-content-center align-items-center d-flex flex-column min-vh-100">
+      <!--The main title of the homepage-->
       <h1 style="padding: 50px; text-align: center; font-size: 80px;">SwiftScore</h1>
-
+      
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
+      <!--form for submission of search term (the inner input is what accepts the search term)-->
       <form method="post" action="">
         <div class="input-group rounded" style="padding: 50px; padding-left: 300px; padding-right: 300px;">
           <input type="search" class="form-control rounded" placeholder="Search for a product..." name="search"/>
           <button type="submit" class="btn btn-outline-dark">Submit</button>
         </div>
       </form>
+      
     </div>
   </body>
 </html>
