--- a/templates/product.html
+++ b/templates/product.html
@@ -7,41 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
+    <!--content-->
     <div class="row justify-content-center align-items-center">
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-      <!-- <script>
-        function setBarWidth(id, val) {
-          // val is from -1 to 1
-          if (!e) {
-            e = window.event;
-          }
-          keycode = e.code || e.key;
-          if (keycode == 'Enter') {
-            console.log('Function called with val '+val)
-            el = document.getElementById(id);
-            w = val > 0 ? val*50 : val*(-50);
-            el.style.width = w.toString()+'%';
-            if (val >= 0) {
-              el.style.left = '50%';
-            } else {
-              el.style.left = (50-w).toString()+'%';
-            }
-            gradr = (val+1)*255/2;
-            gradg = 255 - ((val+1)*255/2);
-            gradb = 0;
-            str = "rgb("+gradr+", "+gradg+", "+gradb+")";
-            console.log(str);
-            el.style.backgroundColor = str;
-            return false;
-          }
-          document.getElementById('keyword-sentiment-bar').onkeypress = () => setBarWidth('keyword-sentiment-bar', 0.22);
-        }
-      </script> -->
-
-      <!-- <a href="/"><button class="btn btn-outline-dark" style="margin-left: 15%; margin-top: 80px;">Go home</button></a> -->
+      
+      <!--link to homepage-->
       <a href="/"><img style="max-height: 96px; max-width: 96px; margin-left: 15%; margin-top: 50px; margin-bottom: 30px;" src="{{ url_for('static', filename='home.svg') }}"></a>
 
+      <!--panel for product description - it contains the name, image, price and rating of each product, along with the option to visit its source page-->
       <div id="productDesc" style="margin: 40px auto; display: grid; grid-template-columns: 25% 35% 30%; grid-template-rows: 40% 25% 25%; gap: 5% 5%; width: 70%;">
         <div style="height: 300px; width: 300px; overflow: hidden; padding: 10px; grid-column-start: 1; grid-column-end: 2; grid-row-start: 1; grid-row-end: 4;">
             <img class="card-img-left" style="display: block; max-width: 100%; max-height: 100%; margin: auto;" src="{{ image }}">
@@ -60,18 +34,9 @@
         </div>
       </div>
 
-      <!-- <div id="reviews" style="padding: 50px; width: 70%;">
-        <h2>Reviews</h2>
-        <h5 style="font-size: 30px;">Ratings: {{ rating }}</h5>
-        <h5 style="font-size: 30px;">Reviews: Positive (68%)</h5>
-        <div class="sentiment-indicator" style="background-color: #222222; margin: 10px auto; height: 10px; border-radius: 5px; position: relative;">
-            <div class="sentiment-bar" style="background-color: #48ff00; width: 34%; height: 10px; border-radius: 5px; position: absolute; left: 50%;"></div>
-        </div>
-      </div> -->
-
+      <!--panel for displaying the sentiment of the keyword for that particular product - the keyword is taken in through the input-->
       <div id="keywords" style="padding: 50px; width: 70%;">
         <h5 style="font-size: 30px; margin: 10px;">Select field:</h5>
-        <!-- <input class="form-control rounded" type="text" list="words" style="width: 50%; margin: 10px;" onsubmit="setBarWidth('keyword-sentiment-bar', 0.22)"> -->
         <form method="post" action="" style="width: 50%;">
           <div class="input-group rounded" style="padding: 50px;">
             <input id="keysearch" class="form-control rounded" type="text" list="words" autocomplete="off" placeholder="Search for a keyword" value="{{ keyword }}" name="keyword" onsubmit="{{ url_for('product', index=index, keyword=keyword) }}"/>
@@ -106,6 +71,7 @@
         <p id="contains-val" hidden>{{ val[keyword] }}</p>
         <div class="sentiment-indicator" style="background-color: #222222; margin: 10px auto; height: 10px; border-radius: 5px; position: relative;">
           <div class="sentiment-bar" id="keyword-sentiment-bar" style="background-color: #ffa600; width: 11%; height: 10px; border-radius: 5px; position: absolute; left: 39%;"></div>
+          <!--script for making the sentiment bar-->
           <script>
             const sentBar = document.getElementById('keyword-sentiment-bar');
             var val = parseFloat(document.getElementById('contains-val').innerHTML);
